---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2025-03-22
  Features:
    - Added more items
  Changes:
    - Updated recipe chain for recycler
    - Updated recipe chain for nuclear reactor
    - Updated locale
    - Updated graphics of buildings
    - Changed military items
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2025-03-14
  Features:
    - Added more items like mosfet, VRM, and doped silicon
  Changes:
    - Updated names for some alloys
    - Updated icons for enriching ores
    - Updated tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2025-03-09
  Features:
    - Added crystallizer
  Changes:
    - Updated tech tree
    - Ferrite among other metals unlocked in mid to late game can now not be smelted in stone or steel furnace
  Bugfixes:
    - electric furnace does not require electro magnets
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2025-03-08
  Features:
    - Added germanium recipe chain
    - Updated recipe chains for sensors
  Bugfixes:
    - Potassium hydroxide solution does not require advanced chemical plant to be made.
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2025-03-07
  Features:
    - Added new lumber mill sound thanks to Cyfagy
    - Added hafnium and rheniun recipe chains
  Changes:
    - removed ammonium-hydroxide-solution. It's kinda the same thing as ammoniacal solution ¯\_(ツ)_/¯
    - crushing tinstone will yield more leadstone. leadstone yields more lead slabs.
  Bugfixes:
    - Productivity modules can now be used with most recipes
    - Propane products are unlocked now after chemical stager. This solves some technology tree cycles.