@@ -1924,7 +1924,7 @@ sp-star-stabilization=Star stabilization
 sp-steel-machining=Steel machining
 sp-steel-wheel=Steel wheel
 sp-superconductor=Superconductor
-sp-superconductor-materials=Superconductor materials
+sp-superconducting-materials=Superconductor materials
 sp-tellurium-processing=Tellurium processing
 sp-thermoelectric-conversion=Thermoelectric conversion
 sp-tin-processing=Tin processing
